--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
-REACT_APP_GRAPHQL_URN=http://localhost:4000/graphql
+REACT_APP_GRAPHQL_URN=https://tranquil-coast-21281.herokuapp.com/graphql
+REACT_APP_GRAPHQL_URN_DEVELOPER=http://localhost:4000/graphql
