--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "serve": "^11.3.0",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
