--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "serve": "^11.3.0",
     "subscriptions-transport-ws": "^0.9.16"
