--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ag-grid-community/all-modules": "^22.1.1",
+    "@ant-design/icons": "^4.0.0",
     "@apollo/react-hooks": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -56,7 +57,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
